# claude-usage

./: CONTRIBUTING.md  README.md
linux/: Makefile  pyproject.toml
linux/claude_usage/: __main__.py  app.py  credentials.py  history_service.py  log_models.py  log_service.py  main_window.py  models.py  notification_service.py  settings_dialog.py  token_dashboard.py  tray_icon.py  tray_proxy.py  usage_chart.py  usage_service.py  usage_tab.py
linux/packaging/: build-appimage.sh  build-deb.sh  claude-usage-autostart.desktop  claude-usage.desktop
linux/packaging/DEBIAN/: control
macos/Resources/: AppIcon.icns  Info.plist
macos/Sources/ClaudeUsageBar/: ClaudeLogModels.swift  ClaudeLogService.swift  ClaudeUsageBarApp.swift  PopoverView.swift  StoredCredentials.swift  TokenDashboardView.swift  UsageChartView.swift  UsageHistoryModel.swift  UsageHistoryService.swift  UsageService.swift
macos/Tests/ClaudeUsageBarTests/: ClaudeLogModelsTests.swift  ClaudeLogParserTests.swift  MenuBarIconRendererTests.swift  NotificationServiceTests.swift  PollingOptionFormatterTests.swift  StoredCredentialsTests.swift  UsageChartInterpolationTests.swift  UsageHistoryServiceTests.swift  UsageModelTests.swift  UsageServiceTests.swift
